generated/xcb_sync.jai


xcb_sync_list_system_counters_sizeof :: (_buffer: *void) -> s32 #foreign libxcb_sync;

xcb_sync_list_system_counters :: (c: *xcb_connection_t) -> xcb_sync_list_system_counters_cookie_t #foreign libxcb_sync;

xcb_sync_list_system_counters_unchecked :: (c: *xcb_connection_t) -> xcb_sync_list_system_counters_cookie_t #foreign libxcb_sync;

xcb_sync_list_system_counters_counters_length :: (R: *xcb_sync_list_system_counters_reply_t) -> s32 #foreign libxcb_sync;

xcb_sync_list_system_counters_counters_iterator :: (R: *xcb_sync_list_system_counters_reply_t) -> xcb_sync_systemcounter_iterator_t #foreign libxcb_sync;

xcb_sync_list_system_counters_reply :: (c: *xcb_connection_t, cookie: xcb_sync_list_system_counters_cookie_t, e: **xcb_generic_error_t) -> *xcb_sync_list_system_counters_reply_t #foreign libxcb_sync;

xcb_sync_create_counter_checked :: (c: *xcb_connection_t, id: xcb_sync_counter_t, initial_value: xcb_sync_int64_t) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_create_counter :: (c: *xcb_connection_t, id: xcb_sync_counter_t, initial_value: xcb_sync_int64_t) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_destroy_counter_checked :: (c: *xcb_connection_t, counter: xcb_sync_counter_t) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_destroy_counter :: (c: *xcb_connection_t, counter: xcb_sync_counter_t) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_query_counter :: (c: *xcb_connection_t, counter: xcb_sync_counter_t) -> xcb_sync_query_counter_cookie_t #foreign libxcb_sync;

xcb_sync_query_counter_unchecked :: (c: *xcb_connection_t, counter: xcb_sync_counter_t) -> xcb_sync_query_counter_cookie_t #foreign libxcb_sync;

xcb_sync_query_counter_reply :: (c: *xcb_connection_t, cookie: xcb_sync_query_counter_cookie_t, e: **xcb_generic_error_t) -> *xcb_sync_query_counter_reply_t #foreign libxcb_sync;

xcb_sync_await_sizeof :: (_buffer: *void, wait_list_len: u32) -> s32 #foreign libxcb_sync;

xcb_sync_await_checked :: (c: *xcb_connection_t, wait_list_len: u32, wait_list: *xcb_sync_waitcondition_t) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_await :: (c: *xcb_connection_t, wait_list_len: u32, wait_list: *xcb_sync_waitcondition_t) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_await_wait_list :: (R: *xcb_sync_await_request_t) -> *xcb_sync_waitcondition_t #foreign libxcb_sync;

xcb_sync_await_wait_list_length :: (R: *xcb_sync_await_request_t) -> s32 #foreign libxcb_sync;

xcb_sync_await_wait_list_iterator :: (R: *xcb_sync_await_request_t) -> xcb_sync_waitcondition_iterator_t #foreign libxcb_sync;

xcb_sync_change_counter_checked :: (c: *xcb_connection_t, counter: xcb_sync_counter_t, amount: xcb_sync_int64_t) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_change_counter :: (c: *xcb_connection_t, counter: xcb_sync_counter_t, amount: xcb_sync_int64_t) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_set_counter_checked :: (c: *xcb_connection_t, counter: xcb_sync_counter_t, value: xcb_sync_int64_t) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_set_counter :: (c: *xcb_connection_t, counter: xcb_sync_counter_t, value: xcb_sync_int64_t) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_create_alarm_value_list_serialize :: (_buffer: **void, value_mask: u32, _aux: *xcb_sync_create_alarm_value_list_t) -> s32 #foreign libxcb_sync;

xcb_sync_create_alarm_value_list_unpack :: (_buffer: *void, value_mask: u32, _aux: *xcb_sync_create_alarm_value_list_t) -> s32 #foreign libxcb_sync;

xcb_sync_create_alarm_value_list_sizeof :: (_buffer: *void, value_mask: u32) -> s32 #foreign libxcb_sync;

xcb_sync_create_alarm_sizeof :: (_buffer: *void) -> s32 #foreign libxcb_sync;

xcb_sync_create_alarm_checked :: (c: *xcb_connection_t, id: xcb_sync_alarm_t, value_mask: u32, value_list: *void) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_create_alarm :: (c: *xcb_connection_t, id: xcb_sync_alarm_t, value_mask: u32, value_list: *void) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_create_alarm_aux_checked :: (c: *xcb_connection_t, id: xcb_sync_alarm_t, value_mask: u32, value_list: *xcb_sync_create_alarm_value_list_t) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_create_alarm_aux :: (c: *xcb_connection_t, id: xcb_sync_alarm_t, value_mask: u32, value_list: *xcb_sync_create_alarm_value_list_t) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_create_alarm_value_list :: (R: *xcb_sync_create_alarm_request_t) -> *void #foreign libxcb_sync;

xcb_sync_change_alarm_value_list_serialize :: (_buffer: **void, value_mask: u32, _aux: *xcb_sync_change_alarm_value_list_t) -> s32 #foreign libxcb_sync;

xcb_sync_change_alarm_value_list_unpack :: (_buffer: *void, value_mask: u32, _aux: *xcb_sync_change_alarm_value_list_t) -> s32 #foreign libxcb_sync;

xcb_sync_change_alarm_value_list_sizeof :: (_buffer: *void, value_mask: u32) -> s32 #foreign libxcb_sync;

xcb_sync_change_alarm_sizeof :: (_buffer: *void) -> s32 #foreign libxcb_sync;

xcb_sync_change_alarm_checked :: (c: *xcb_connection_t, id: xcb_sync_alarm_t, value_mask: u32, value_list: *void) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_change_alarm :: (c: *xcb_connection_t, id: xcb_sync_alarm_t, value_mask: u32, value_list: *void) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_change_alarm_aux_checked :: (c: *xcb_connection_t, id: xcb_sync_alarm_t, value_mask: u32, value_list: *xcb_sync_change_alarm_value_list_t) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_change_alarm_aux :: (c: *xcb_connection_t, id: xcb_sync_alarm_t, value_mask: u32, value_list: *xcb_sync_change_alarm_value_list_t) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_change_alarm_value_list :: (R: *xcb_sync_change_alarm_request_t) -> *void #foreign libxcb_sync;

xcb_sync_destroy_alarm_checked :: (c: *xcb_connection_t, alarm: xcb_sync_alarm_t) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_destroy_alarm :: (c: *xcb_connection_t, alarm: xcb_sync_alarm_t) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_query_alarm :: (c: *xcb_connection_t, alarm: xcb_sync_alarm_t) -> xcb_sync_query_alarm_cookie_t #foreign libxcb_sync;

xcb_sync_query_alarm_unchecked :: (c: *xcb_connection_t, alarm: xcb_sync_alarm_t) -> xcb_sync_query_alarm_cookie_t #foreign libxcb_sync;

xcb_sync_query_alarm_reply :: (c: *xcb_connection_t, cookie: xcb_sync_query_alarm_cookie_t, e: **xcb_generic_error_t) -> *xcb_sync_query_alarm_reply_t #foreign libxcb_sync;

xcb_sync_set_priority_checked :: (c: *xcb_connection_t, id: u32, priority: s32) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_set_priority :: (c: *xcb_connection_t, id: u32, priority: s32) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_get_priority :: (c: *xcb_connection_t, id: u32) -> xcb_sync_get_priority_cookie_t #foreign libxcb_sync;

xcb_sync_get_priority_unchecked :: (c: *xcb_connection_t, id: u32) -> xcb_sync_get_priority_cookie_t #foreign libxcb_sync;

xcb_sync_get_priority_reply :: (c: *xcb_connection_t, cookie: xcb_sync_get_priority_cookie_t, e: **xcb_generic_error_t) -> *xcb_sync_get_priority_reply_t #foreign libxcb_sync;

xcb_sync_create_fence_checked :: (c: *xcb_connection_t, drawable: xcb_drawable_t, fence: xcb_sync_fence_t, initially_triggered: u8) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_create_fence :: (c: *xcb_connection_t, drawable: xcb_drawable_t, fence: xcb_sync_fence_t, initially_triggered: u8) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_trigger_fence_checked :: (c: *xcb_connection_t, fence: xcb_sync_fence_t) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_trigger_fence :: (c: *xcb_connection_t, fence: xcb_sync_fence_t) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_reset_fence_checked :: (c: *xcb_connection_t, fence: xcb_sync_fence_t) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_reset_fence :: (c: *xcb_connection_t, fence: xcb_sync_fence_t) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_destroy_fence_checked :: (c: *xcb_connection_t, fence: xcb_sync_fence_t) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_destroy_fence :: (c: *xcb_connection_t, fence: xcb_sync_fence_t) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_query_fence :: (c: *xcb_connection_t, fence: xcb_sync_fence_t) -> xcb_sync_query_fence_cookie_t #foreign libxcb_sync;

xcb_sync_query_fence_unchecked :: (c: *xcb_connection_t, fence: xcb_sync_fence_t) -> xcb_sync_query_fence_cookie_t #foreign libxcb_sync;

xcb_sync_query_fence_reply :: (c: *xcb_connection_t, cookie: xcb_sync_query_fence_cookie_t, e: **xcb_generic_error_t) -> *xcb_sync_query_fence_reply_t #foreign libxcb_sync;

xcb_sync_await_fence_sizeof :: (_buffer: *void, fence_list_len: u32) -> s32 #foreign libxcb_sync;

xcb_sync_await_fence_checked :: (c: *xcb_connection_t, fence_list_len: u32, fence_list: *xcb_sync_fence_t) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_await_fence :: (c: *xcb_connection_t, fence_list_len: u32, fence_list: *xcb_sync_fence_t) -> xcb_void_cookie_t #foreign libxcb_sync;

xcb_sync_await_fence_fence_list :: (R: *xcb_sync_await_fence_request_t) -> *xcb_sync_fence_t #foreign libxcb_sync;

xcb_sync_await_fence_fence_list_length :: (R: *xcb_sync_await_fence_request_t) -> s32 #foreign libxcb_sync;

xcb_sync_await_fence_fence_list_end :: (R: *xcb_sync_await_fence_request_t) -> xcb_generic_iterator_t #foreign libxcb_sync;

#scope_file

libxcb_sync :: #library,system "libxcb-sync";
